--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🧸 AFRA'S SHOP | Online Amigurumi Shop Center</title>
+    <title>🧸AFRA'S SHOP CENTER | Online Amigurumi Shop Center</title>
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/toastr/toastr.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -99,7 +99,7 @@
       </div>
     </div>
     <footer class="footer">
-      <a href="https://www.instagram.com/@duckygurumi/" target="_blank">
+      <a href="https://www.instagram.com/afromias/" target="_blank">
         <i class="bi bi-instagram"></i> 
       </a>
     </footer>
