--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav class="navbar">
       <h2 class="title">AmigurumiShop</h2>
       <ul class="menu">
-        <li class="active">TOYS</li>
-        <li>GIFTS</li>
+        <li class="active"><a href="index.html" target="_self">TOYS</a></li>
+        <li><a href="gallery.html" target="_blank">GALLERY</a></li>
         <li>BAGS</li>
         <li>ABOUT</li>
       </ul>
@@ -35,21 +35,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./assets/images/screen3.jpg"
+              src="./assets/images/screen_crochet.png"
               class="d-block w-100"
               alt="Online Shop"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/screen5.png"
+              src="./assets/images/screen_ducky.png"
               class="d-block w-100"
               alt="Handmade"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/screen6.png"
+              src="./assets/images/screen_mushroom.png"
               class="d-block w-100"
               alt="Crochet"
             />
@@ -75,7 +75,7 @@
         </button>
       </div>
     </section>
-    <section class="store my-5">
+    <section class="store mt-5">
       <div class="filter__background"></div>
       <ul class="filter">
         <li class="active">ALL</li>
@@ -100,7 +100,7 @@
     </div>
     <footer class="footer">
       <a href="https://www.instagram.com/afromias/" target="_blank">
-        <i class="bi bi-instagram"></i> 
+        <img src="https://seeklogo.com/images/I/instagram-logo-2D3332C00B-seeklogo.com.png" width="50" height="50">
       </a>
     </footer>
     
