change the script

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <section class="slider">
       <div
-        id="carouselBookSlider"
+        id="carouselAmigurumiSlider"
         class="carousel slide"
         data-bs-ride="carousel"
       >
@@ -58,7 +58,7 @@
         <button
           class="carousel-control-prev"
           type="button"
-          data-bs-target="#carouselBookSlider"
+          data-bs-target="#carouselAmigurumiSlider"
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -67,7 +67,7 @@
         <button
           class="carousel-control-next"
           type="button"
-          data-bs-target="#carouselBookSlider"
+          data-bs-target="#carouselAmigurumiSlider"
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
