Change the files

--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="galery.css">
-</head>
-<body>
+    <title>🧸AFRA'S SHOP CENTER | GALLERY</title>
+    <link rel="stylesheet" href="galery.css" />
+  </head>
+  <body>
     <article class="gallery">
         <img src="./assets/images/amigrumi/mom.jpg" alt="super mom" />
         <blockquote class="quote spacer">
@@ -29,6 +29,7 @@
         <div class="spacer"></div>
         <img src="./assets/images/amigrumi/turtle.JPG" alt="turtle" />
         <img src="./assets/images/amigrumi/duck2.JPG" alt="duck" />
-      </article>
+    </article>
+   
 </body>
 </html>
