--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ul class="menu">
         <li class="active"><a href="index.html" target="_self">TOYS</a></li>
         <li><a href="gallery.html" target="_blank">GALLERY</a></li>
-        <li>BAGS</li>
+        <li>CONTACT</li>
         <li>ABOUT</li>
       </ul>
       <ul class="menu__icons">
